--- a/src/assets/scss/_vue-select.scss
+++ b/src/assets/scss/_vue-select.scss
@@ -13,7 +13,7 @@
         background-color: $bg-color;
         border: 1px solid $dark-color;
         max-height: 170px;
-        overflow-y: scroll;
+        overflow-y: auto;
         @extend .visible-scrollbar;
 
         .vs__dropdown-option {
